# ZeroTrust.sh

./: .claudeignore  .gitignore  .golangci.yml  .test.json  AGENTS.md  CLAUDE.md  HIGH_TODO.md  ISSUES.md  JOERN_ENGINE_TRIAGE_REPORT.md  LICENSE  Makefile  Oops.rej  PERFORMANCE_DIAGNOSTIC_REPORT.md  README.md  REMEDIATION_PLAN.md  TODO.md  calibration.json  generate.go  go.mod  go.sum  tools.go
.claude/: settings.json
.serena/: project.yml
docker/: docker-compose.yml
docs/: ARCHITECTURE_REWRITE.md  CODEBASE_ASSESSMENT.md  COMPARATIVE_ANALYSIS.md  DEEPAUDIT_vs_ZEROTRUST.md  architecture.md  architecture_evolution.md  architecture_overview.mmd  cli-output-design.md  complexity-class-architecture.mmd  execution-overview.xlsx  execution-plan-approach-1.docx  execution-plan-approach-1.md  execution_timeline_flowchart.mmd  generate_execution_plan_xlsx.py  generate_overview.py  joern-http-api.md  plan_summary.md  project_architecture_cascading_intelligence.mmd  project_high_level_architecture.mmd  research-papers.md
github-page/: package-lock.json  package.json
pipeline/: config.py  run.py
preview/: main.go
product/: INDEX.md  README.md
scripts/: calibrate.py  format_template.mjs  format_template.sh  gendoc.sh  run_demo.sh  train_lora.py  (+1 more)
worker/: main.py  pyproject.toml  requirements.txt  tuning.py
worker/handlers/: ast_edit.py  classify.py  embed.py  llm_scan.py  llm_verify.py  summarize.py
worker/models/: codet5p.py  unixcoder.py  xgrammar.py
worker/schemas/: verdict.py
worker/tests/: test_classify.py  test_llm_verify.py
worker/training/: curate.py
(+1067 files in other folders)
