[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zerotrust-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "xgrammar>=0.1.18",
    "transformers>=4.44.0",
    "torch>=2.3.0",
    "ollama>=0.4.0",
    "pydantic>=2.7.0",
    "accelerate>=0.30.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["handlers*", "models*", "schemas*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
